--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -23,6 +23,7 @@
   line-height: 2rem;
   padding-bottom: 20px;
   border-bottom: 1px dashed var(--yellow-theme-main-color);
+  line-height: 30px;
 }
 
 .personal-information {
@@ -52,6 +53,7 @@ ul {
 }
 
 .value {
+  padding-top: 10px;
   border: none;
 }
 
