--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,20 +6,27 @@
   align-items: center;
   font-size: 1.2rem;
   position: sticky;
+  top: 0;
+  z-index: 20;
 }
 
 .navbar-container {
   display: flex;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: inherit;
   padding: 0px 20px;
-  flex: 1;
+  max-width: 1500px;
 }
 
 .navbar-container-logo {
   color: var(--yellow-theme-main-color);
   cursor: pointer;
+  align-items: center;
+  text-decoration: none;
+  font-size: 2rem;
+  flex-grow: 1;
 }
 
 .navbar-container-menu {
@@ -31,6 +38,7 @@
 .navbar-container-menu-item {
   line-height: 40px;
   margin-right: 1.5rem;
+  font-size: 1.6rem;
 }
 
 .navbar-container-menu-item::after {
@@ -39,7 +47,7 @@
   height: 3px;
   width: 0;
   background: transparent;
-  transition: all 0.3s ease;
+  transition: width 0.7s ease, background-color 0.5s ease;
 }
 
 .navbar-container-menu-item:hover::after {
@@ -52,6 +60,8 @@
   text-decoration: none;
   padding: 0.5rem;
   font-weight: 500;
+  height: 100%;
+  border-bottom: 3px solid transparent;
 }
 
 .nav-icon {
@@ -64,6 +74,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
+    border-top: 1px solid #fff;
     position: absolute;
     top: 80px;
     left: -110%;
@@ -72,12 +83,20 @@
   }
 
   .navbar-container-menu.active {
-    background-color: #181818;
+    background: #181818;
     left: 0px;
     opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+    border-bottom: 1px solid #282828;
+    margin: 0px;
+    padding: 20px 0;
   }
-
-  .navbar-container-menu-item {
+  .navbar-container-menu-item.active {
+    color: var(--yellow-theme-main-color);
+    border: none;
+  }
+  .navbar-container-menu-item-links .navbar-container-menu-item {
     border-bottom: 1px solid #282828;
     margin: 0px;
     padding: 20px 0px;
@@ -85,7 +104,9 @@
   .nav-icon {
     display: block;
     cursor: pointer;
+    font-size: 1.8rem;
+    cursor: pointer;
     color: var(--yellow-theme-main-color);
-    padding-right: 20px;
+    padding-right: 10px;
   }
 }
