--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -32,7 +32,9 @@
 .navbar-container-menu {
   display: flex;
   list-style: none;
+  justify-content: flex-end;
   text-align: center;
+  width: 50%;
 }
 
 .navbar-container-menu-item {
